# CatLearnQt

./: .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  CatLearnQt.pro  README.md  README_English.md  build-GrayCatQt-Desktop_Qt_5_14_2_GCC_64bit-Debugconfig.ini  msvc_make.bat
Examples/CatQuickExamples/: CMakeLists.txt  CatConfig.cpp  CatConfig.h  CatQuickExamples.pro  DGJUec.json  QmlConfig.h  bgQhSf.json  main.cpp
Examples/CatQuickExamples/QmlCatLog/: .gitignore  CMakeLists.txt  QmlCatLog.cpp  QmlCatLog.h  QmlCatLog.pri
Examples/CatQuickExamples/QmlSrc/: FlowView.qml  GeneralTitleItem.qml  GridLayoutView.qml  ProjectObject.qml  QmlSrc.qrc  TitleItem.qml  UiFlowView.qml  Win10TitleItem.qml  generalmain.qml  main.qml
Examples/CatQuickExamples/QrenCode/: QtQrenCode.cpp  QuickQrenCodeParentItem.cpp  QuickQrenCodeParentItem.h
Examples/CatQuickExamples/Resource/: Resource.qrc  app_win32.rc
Examples/CatQuickExamples/WebResource/: charts.html  line-marker.html
Examples/CatWidgetExamples/: CMakeLists.txt  CatAbout.cpp  CatAbout.h  CatAbout.ui  CatDrawingBoard.cpp  CatDrawingBoard.h  CatQuickWidget.cpp  CatQuickWidget.ui  CatSettings.cpp  CatSettings.h  CatSettings.ui  CatWidget.cpp  CatWidgetExamples.pri  CatWidgetExamples.pro  WinMainWidget.cpp  WinMainWidget.h  WinMainWidget.mm  WinMainWidget.ui  WinWidget.cpp  WinWidget.h  WinWidget.ui  main.cpp
Examples/CatWidgetExamples/CatConfig/: CMakeLists.txt  CatConfig.cpp  CatConfig.h  CatConfig.pri
Examples/CatWidgetExamples/QuickWidgetTools/: CMakeLists.txt  QuickSliders.ui
Examples/CatWidgetExamples/Resource/: Resource.qrc  app_win32.rc
Examples/CatWidgetExamples/WidgetTools/: CMakeLists.txt  CatQcustomplotTools.cpp  CatQcustomplotTools.h  ImageTools.ui  InputTools.cpp  InputTools.h  InputTools.ui  PagingNavigationTools.cpp  PagingNavigationTools.h  PagingNavigationTools.ui  QrenCodeTool.cpp  RimlessWindow.cpp  SideColumnTool.cpp  SideColumnTool.ui  SliderTools.cpp  SliderTools.ui  TableViewTool.cpp  TableViewTool.h  TableViewTool.ui  WidgetTools.pri
GrayCatQt/: CMakeLists.txt  GrayCatQt.pri  GrayCatQt.pro
GrayCatQt/Resource/: Resource.qrc
GrayCatQt/Resource/lang/: language_en.ts  language_zh_CN.qm  language_zh_CN.ts
GrayCatQt/Resource/qml/: CatQrenCode.qml  CatSliders.qml
GrayCatQt/Resource/qss/: WinWidget.css
GrayCatQt/Src/CatControl/: CMakeLists.txt  CarouselImageWidget.cpp  CarouselImageWidget.h  CatControl.pri  CatDoubleSlider.cpp  CatDoubleSlider.h  CatDoubleValidator.cpp  CatDoubleValidator.h  CatFlowLayout.cpp  CatFlowLayout.h  CatHeaderViewBasic.cpp  CatHeaderViewBasic.h  CatIntValidator.cpp  CatIntValidator.h  CatPagingNavigation.cpp  CatPagingNavigation.h  CatShadowWidget.cpp  CatShadowWidget.h  CatSlider.cpp  CatSlider.h  CatTableViewBasics.cpp  CatTableViewBasics.h  CatTableWidgetBasics.cpp  CatTableWidgetBasics.h  CatToolTip.cpp  CatToolTip.h  ListingOptions.cpp  ListingOptions.h  RangeSlider.h  qxtnamespace.h  qxtspanslider.h  qxtspanslider_p.h
GrayCatQt/Src/CatFrameless/: CMakeLists.txt  CatFrameLessMainView_Unix.cpp  CatFrameLessMainView_Win.cpp  CatFrameless.pri  CatFramelessDialog.cpp  CatFramelessMainWindow.cpp  CatFramelessMainWindow.h  CatFramelessWidget.cpp
GrayCatQt/Src/CatGraphicsView/: CMakeLists.txt  CatGraphicsObject.cpp  CatGraphicsObject.h  CatGraphicsScene.cpp  CatGraphicsScene.h  CatGraphicsView.cpp  CatGraphicsView.h  CatGraphicsView.pri
GrayCatQt/Src/CatLog/: CMakeLists.txt  CatLog  CatLog_Message.hpp  CatLog_Sington.cpp  CatLog_Sington.h  README.md
GrayCatQt/Src/CatNetWork/: CMakeLists.txt  CatHttpParam.cpp  CatHttpParam.h  CatNetWork.pri  CatNetWorkHttp.cpp  CatNetWorkHttp.h
GrayCatQt/Src/CatSerial/: CMakeLists.txt  CatSerial  CatSerial.pri  CatSerialPort.cpp  CatSerialPort.h  CatWinMonitorSerial.cpp  CatWinMonitorSerial.h  MonitorSerial.cpp  MonitorSerial.h  SerialDevFilter.cpp  SerialDevFilter.h
GrayCatQt/Src/CatUniversal/: CMakeLists.txt  CatFile.cpp  CatFile.h  CatFont.cpp  CatFont.h  CatSettingBase.cpp  CatSettingBase.h  CatThread.cpp  CatThread.h  CatThreadPool.cpp  CatUniversal.pri
GrayCatQt/Src/CatWidget/: CMakeLists.txt  CatWidget.pri
GrayCatQt/Src/CatWidgetFrameless/: CMakeLists.txt  CatFrameLessMainView.h  CatFrameLessMainView_Win.cpp  CatFramelessDialog.cpp  CatFramelessDialog.h  CatFramelessMainWindow.cpp  CatFramelessWidget.cpp  CatFramelessWidget.h  CatWidgetFrameless.pri
GrayCatQt/Src/SingleApplication/: CMakeLists.txt  singleapplication.h
GrayCatQt/main/: CatAbout.cpp  CatAbout.h  CatAbout.ui  CatDrawingBoard.cpp  CatDrawingBoard.h  CatDrawingBoard.ui  CatQuickWidget.cpp  CatQuickWidget.h  CatQuickWidget.ui  CatSettings.cpp  CatSettings.h  CatSettings.ui  CatWidget.cpp  CatWidget.h  CatWidget.ui  MainWindow.cpp  MainWindow.h  WinWidget.cpp  WinWidget.h  WinWidget.ui  main.cpp  main.pri
GrayCatQt/main/CatConfig/: CatConfig.cpp  CatConfig.h
GrayCatQt/main/QuickWidgetTools/: QuickQrenCode.cpp  QuickQrenCode.h  QuickQrenCode.ui  (+4 more)
GrayCatQtCore/: CMakeLists.txt  GrayCatQtCore.pri  GrayCatQtCore.pro
GrayCatQtQuick/: CMakeLists.txt  GrayCatQtQuick.cmake  GrayCatQtQuick.pri  GrayCatQtQuick.pro  GrayCatQtQuick.qrc  README.md  qmldir
GrayCatQtQuick/designer/: GrayCatQtQuick.metainfo
GrayCatQtQuick/imports/: imports.pri
GrayFramelesshelper/: CMakeLists.txt  GrayFramelesshelper.pri  framelesshelper.cpp  framelesshelper.h  framelesshelper_global.h  framelesshelper_win32.cpp  framelesshelper_win32.h  framelesshelper_windows.h  framelessquickhelper.h  utilities.h  utilities_linux.cpp  utilities_macos.mm
examples/QCatGrayQuickExamples/: CMakeLists.txt  CatConfig.cpp  CatConfig.h  QmlConfig.h  README.md  main.cpp
examples/QCatGrayWidgetExamples/: CMakeLists.txt  CatAbout.ui  CatAbout_ui.py  CatDrawingBoard.cpp  CatDrawingBoard.h  CatDrawingBoard_ui.py  CatGrayQuickWidget.cpp  CatGrayQuickWidget.h  CatGrayQuickWidget.ui  CatQuickWidget.cpp  CatQuickWidget.h  CatQuickWidget_ui.py  CatSettings.cpp  CatSettings_ui.py  CatWidget.cpp  CatWidget.h  CatWidget_ui.py  README.md  WinWidget.cpp  WinWidget.h  WinWidget.ui  WinWidget_ui.py  main.cpp
(+1078 files in other folders)
